Configure GoodService transit direction
